# webjudge-agents

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  generate_compose.py  pyproject.toml  run_benchmark.py  sample.env  scenario.toml
scenarios/webjudge/: Dockerfile.adk_webjudge  Dockerfile.web_agent  adk_webjudge.py  base_web_agent.py  dataset_loader.py  google_computer_use_agent.py  scenario.toml  vision_language_agent.py  web_agent.py  webjudge_common.py  webjudge_logic.py
src/agentbeats/: client.py  client_cli.py  run_scenario.py  tool_provider.py
tests/: test_nebius.py
