[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.5",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.6",
    "openai>=1.0.0",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "datasets>=3.0.0",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
